--- a/PVA1_421.Rmd
+++ b/PVA1_421.Rmd
@@ -228,6 +228,11 @@ Now, please change the initial abundance to 500 and re-run the "Sensitivity Test
 ## Case study: Red Knots and Horseshoe Crabs
 
 
+[Red Knot model](https://insightmaker.com/insight/hoWpE5JlD9x5AaPHujVg4/Red-Knot-Matrix-Model)
+
+[Horseshoe Crab model](https://insightmaker.com/insight/gim35Z9XDbmFy7gcQy2JD/Horseshoe-crab-model)
+
+
 
 
 
