--- a/LECTURE9.Rmd
+++ b/LECTURE9.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Small-population paradigm"
 author: "NRES 470/670"
-date: "Spring 2022"
+date: "Spring 2023"
 output: 
   html_document: 
     theme: spacelab
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
 
-The final extinction of a population is usually caused by factors that small populations are uniquely sensitive to; once a population gets small enough, *demographic stochasticity*, *genetic drift*, and *inbreeding depression* can together deliver the final death knell to a population. 
+The final extinction of a population is usually caused by factors that small populations are uniquely sensitive to; once a population gets small enough, *demographic stochasticity*, *genetic drift*, and *inbreeding depression* can together deliver the final blow to a population. 
 
 In conservation biology the study of the drivers of extinction for small populations is called the *small-population paradigm*. The small-population paradigm refers to the tendency in **conservation biology** to study those largely *stochastic* factors that can result in the extinction or degradation of small populations. 
 
@@ -24,31 +24,29 @@ We have already explored this concept, which is central to the small population 
 
 The simple fact is: _it is much more likely for all 10 individuals in a population to be **unlucky** in a given year than for all 1000 individuals in a population to be **unlucky** in a given year!!_ -- just as it is very unlikely for all coin flips out of 1000 to come up heads...
 
-This illustrates the very important concept, that small populations can go extinct due to demographic stochasticity alone, whereas this possibility is vanishingly small for large populations (this is basically impossible). 
+This illustrates the very important concept, that small populations can go extinct due to demographic stochasticity alone, whereas this possibility is vanishingly small for large populations. 
 
 The moral of the story is: weird and dramatic things (e.g., extinction) can happen in small populations for no other reason than that the population is small!
 
 Dramatic events like random extinction just would **never happen** in large populations due to random mating, birth, and mortality processes (assuming a stable, favorable environment and no range-wide catastrophic events)!
 
-Same goes for *genetic drift*! Genetic drift is a _small-population phenomenon_!
-
-
 ### Genetic drift
 
-In large populations, random forces are just not strong enough to eradicate a relatively common gene variant (allele) from a population (this could happen by natural selection, but not through random reproductive processes). In small populations, random chance can be the primary driver of genetic change over time! 
+Same goes for *genetic drift*! Severe or consequential random fluctuations in a population's gene pool (genetic drift) is a _small-population phenomenon_!
+
+In large populations, random forces are just not strong enough to eradicate a relatively common gene variant (allele) from a population (this could happen by natural selection, but not through random reproductive processes). 
+
+In small populations, random chance can be the *primary driver* of genetic change over time! 
 
 ![](geneticdrift1.png)
 
-Let's imagine that the balls in the jars in the above figure are individuals. The black dots indicate how many offspring that individual will have (thereby passing on its genes). The different colored balls represent different genetic variants. Each jar, left to right, represents a different (non-overlapping) generation. 
+Let's imagine that the balls in the jars in the above figure are individuals. The black dots indicate how many offspring each individual will have (thereby passing on its genes). The different colored balls represent different genetic variants. Each jar, left to right, represents a different (non-overlapping) generation. 
 
 Does this sound familiar? Just by random chance, some individuals will breed and some will not. Just by random chance, some individuals will have more of their offspring survive. Genetic drift is simply a consequence of **demographic stochasticity**. 
 
-Finally, let's imagine that the red balls represent individuals that are more likely to survive a rare drought (but have no selective advantage or disadvantage under normal circumstances). Just by random chance, the blue individuals happen to successfully mate and reproduce more than the red individuals- the blue variant becomes **fixed** in the population and the red variants go extinct. *There is no natural selection involved in this scenario -- just stochasticity!*
+Finally, let's imagine that the red balls represent individuals that are more resilient to drought (but have no selective advantage or disadvantage under normal circumstances). Just by random chance, the blue individuals happen to successfully mate and reproduce more than the red individuals- the blue variant becomes **fixed** in the population and the red variants go extinct. *There is no natural selection involved in this scenario -- just stochasticity!*
 
 And now, by random chance, this population is now more susceptible to drought than it was before!
-
-**Q**: is a small population or a large population more susceptible to genetic drift (e.g., loss of variation due to random chance)?
-
 
 ### Inbreeding depression
 
@@ -56,43 +54,33 @@ And now, by random chance, this population is now more susceptible to drought th
 
 Inbreeding depression is another problem peculiar to small populations.
 
-Most diploid populations have some 'bad' gene variants (alleles) in their gene pool. These are often called **deleterious alleles**. These deleterious alleles usually don't cause problems because in general they are **recessive** - that is, the bad effect is only apparent if an individual has _two copies of that allele_! And since these alleles are rare, it is extremely unlikely that you get two copies of the same bad allele!   
+Most diploid populations have some 'bad' gene variants (alleles) in their gene pool. These are often called **deleterious alleles**. These deleterious alleles usually don't cause problems because in general they are **recessive** - that is, the bad effect is only apparent if an individual has _two "bad" copies of that allele_! If these alleles are rare in the population, it is extremely unlikely that you get two copies of the same bad allele by chance!   
 
 Unless...your two parents are close relatives (which can be more common in small populations). If your parents are close relatives, both of them have a relatively high probability of inheriting at least one of the same 'bad' gene variants from a single common ancestor! 
-
-![](inbreeding2.jpg)
-
-The above image is of [Charles II of Spain](https://en.wikipedia.org/wiki/Charles_II_of_Spain), who tragically illustrates some of the issues that can emerge with severe inbreeding. 
-
 
 ## Extinction vortex
 
 ![](vortex1.jpg)
 
-
 One of the important ideas emerging from the small population paradigm is the concept of the **extinction vortex**. This concept is illustrated in the above figure.
 
-Once a population gets small enough, it becomes subject to catastrophic declines due to demographic (and environmental) stochasticity, leading to inbreeding and random loss of useful genes, leading to reduced vital rates, leading to smaller population sizes, leading to further genetic degradation, leading to more possibility of catastrophic declines due to demographic stochasticity, leading inevitably to extinction...
+Once a population gets small enough, it becomes subject to catastrophic declines due to demographic (and environmental) stochasticity, leading to inbreeding and random loss of useful genes, leading to reduced vital rates, leading to smaller population sizes, leading to further genetic degradation, leading to greater influence of demographic stochasticity, leading ultimately to extinction...
 
-In general, extinction is often caused by stochastic processes, but stochastic processes are unlikely to be the reason the population got small in the first place! (that is the topic of the 'declining population paradigm' lecture!)
+In general, extinction is often caused by stochastic processes, but stochastic factors are unlikely to be the reason the population got small in the first place! (that is the topic of the 'declining population paradigm' lecture!)
 
 ## Minimum Viable Populations (MVP)
 
 As wildlife managers, we often wish to know: "how small does a population have to be before we have to start worrying about adverse consequences like extinction, genetic erosion, and inbreeding?"
 
-When we talked about [Allee effects](LECTURE5.html), we saw a case in which a deterministic population model could have a minimum viable population size- below a certain critical threshold, the population was doomed to extinction, and above the threshold the population would deterministically increase until carrying capacity. 
-
-However, the MVP concept is derived from *conservation biology* and not from theoretical population biology. Conservation biology deals with real-world systems which are messy, variable and uncertain. Therefore, the MVP concept is usually quantified using stochastic population models.  
-
-The most satisfying general definition of MVP (in my opinion) directly relates to the extinction vortex concept: Minimum Viable Population size (MVP) is that *population size above which the extinction vortex can be safely avoided*. 
+The most satisfying general definition of MVP (in my opinion) directly relates to the extinction vortex concept: Minimum Viable Population size (MVP) is that *population size below which the population becomes vulnerable to the extinction vortex* (or alternatively, the abundance threshold above which the extinction vortex can be safely avoided!). 
 
 However, the above definition is not strictly quantifiable for most species. Also MVP is often defined in relation to population models, many of which don't have an explicit genetic component (because we often don't know exactly how many deleterious recessive alleles are in a population!). The quantitative, operational definition that we will use in this course is:
 
 > MVP: the abundance threshold below which extinction risk exceeds [a risk tolerance threshold] over [a time horizon] 
 
-To quantify MVP, we need to specify: (1) a time horizon (e.g., 100 years) and (2) a risk tolerance threshold (e.g., 5% extinction risk).
+To quantify MVP, we need to specify: (1) a time horizon (e.g., 50 years) and (2) a risk tolerance threshold (e.g., 5% extinction risk).
 
-For example, with a time horizon of 50 years and a risk tolerance threshold of 5%, MVP could be quantified as:
+For example:
 
 > MVP: the abundance threshold below which extinction risk exceeds 5% over 50 years
 
@@ -120,9 +108,9 @@ The Aruba rattlesnake was listed as *Critically Endangered* by IUCN (it is no lo
 See [Lab 5](LAB5.html) for the related MVP activity.  
 
 
-**Q** Why are island-endemic species like the Aruba rattlesnake so vulnerable to extinction? [tophat]
+**Q** Why are island-endemic species like the Aruba rattlesnake so vulnerable to extinction? [PointSolutions]
 
-**Q** Are species that are confined to small areas (like the Aruba rattlesnake) more vulnerable to *environmental stochasticity* than species that occupy larger geographic ranges? [tophat]
+**Q** Are species that are confined to small areas (like the Aruba rattlesnake) more vulnerable to *environmental stochasticity* than species that occupy larger geographic ranges? [PointSolutions]
 
 
 
