--- a/LECTURE9.Rmd
+++ b/LECTURE9.Rmd
@@ -48,6 +48,8 @@ Finally, let's imagine that the red balls represent individuals that are more re
 
 And now, by random chance, this population is now more susceptible to drought than it was before!
 
+In a much larger population, the possibility of losing this drought-resistance allele from the gene pool due to random genetic drift would be vanishingly small. 
+
 ### Inbreeding depression
 
 ![](inbreeding1.jpg)
@@ -56,15 +58,21 @@ Inbreeding depression is another problem peculiar to small populations.
 
 Most diploid populations have some 'bad' gene variants (alleles) in their gene pool. These are often called **deleterious alleles**. These deleterious alleles usually don't cause problems because in general they are **recessive** - that is, the bad effect is only apparent if an individual has _two "bad" copies of that allele_! If these alleles are rare in the population, it is extremely unlikely that you get two copies of the same bad allele by chance!   
 
-Unless...your two parents are close relatives (which can be more common in small populations). If your parents are close relatives, both of them have a relatively high probability of inheriting at least one of the same 'bad' gene variants from a single common ancestor! 
+Unless... the two parents are close relatives (which can be more common in small populations). If parents are close relatives, both parents have a relatively high probability of inheriting at least one of the same 'bad' gene variants from a single common ancestor! 
+
+If you consider that that single common ancestor likely had *lots* of deleterious recessive alleles embedded in their genome, then the chance of an inbred offspring inheriting two copies of that allele for at least one of those loci becomes fairly high! 
 
 ## Extinction vortex
 
-![](vortex1.jpg)
+![](vortex1.jpg){width=50%}
 
 One of the important ideas emerging from the small population paradigm is the concept of the **extinction vortex**. This concept is illustrated in the above figure.
 
 Once a population gets small enough, it becomes subject to catastrophic declines due to demographic (and environmental) stochasticity, leading to inbreeding and random loss of useful genes, leading to reduced vital rates, leading to smaller population sizes, leading to further genetic degradation, leading to greater influence of demographic stochasticity, leading ultimately to extinction...
+
+Furthermore, once a population falls into the extinction vortex, it can't necessarily be saved by removing the factors that caused the population to become small in the first place. That is, once genetic drift has removed important adaptive variation from the gene pool, and once inbreeding has caused deleterious recessive alleles to start expressing more frequently, the population may not be able to be recovered effectively.  
+
+Case study: florida panther genetic rescue.
 
 In general, extinction is often caused by stochastic processes, but stochastic factors are unlikely to be the reason the population got small in the first place! (that is the topic of the 'declining population paradigm' lecture!)
 
