--- a/PVA1_421.Rmd
+++ b/PVA1_421.Rmd
@@ -21,6 +21,15 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ```
 
+
+[Red Knot model](https://insightmaker.com/insight/hoWpE5JlD9x5AaPHujVg4/Red-Knot-Matrix-Model)
+
+[Horseshoe Crab model](https://insightmaker.com/insight/gim35Z9XDbmFy7gcQy2JD/Horseshoe-crab-model)
+
+[Key PPT slides for exercises](REKN.html)
+
+
+
 ## Population Viability Analysis (PVA)
 
 In this short course, we will explore the use of **population models** to address conservation questions-- a process often called **population viability analysis (PVA)** 
@@ -231,7 +240,7 @@ Now, please change the initial abundance to 500 and re-run the "Sensitivity Test
 
 [Horseshoe Crab model](https://insightmaker.com/insight/gim35Z9XDbmFy7gcQy2JD/Horseshoe-crab-model)
 
-
+[Key PPT slides for exercises](REKN.html)
 
 
 
