--- a/PVA1_421.Rmd
+++ b/PVA1_421.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 [Horseshoe Crab model](https://insightmaker.com/insight/gim35Z9XDbmFy7gcQy2JD/Horseshoe-crab-model)
 
-[Key PPT slides for exercises](REKN.html)
+[Key PPT slides for exercises](REKN.pptx)
 
 
 
